fixed yaml and removed modifycomment from everywhere
