# doc/api.yaml
@@ -120,10 +120,10 @@ components:
         properties:
           username: {$ref: "#/components/schemas/Username"}
           profile_picture_url:
-            description: URL of the profile picture. Accepting only http/https URLs and .png/.jpg/.jpeg extensions.
+            description: URL of the profile picture. Accepting only ID attached with .png/.jpg/.jpeg extensions.
             type: string
             pattern: '^[a-zA-Z0-9-_]*\.(png|jpg|jpeg)$'
-            example: "http://images/lab.png"
+            example: "Cksvy-ZXtXRE.jpeg"
             minLength: 0
             maxLength: 150
     Profile:
@@ -145,10 +145,10 @@ components:
           type: integer
           example: 689
         profile_picture_url:
-          description: URL of the profile picture. Accepting only http/https URLs and .png/.jpg/.jpeg extensions.
+          description: URL of the profile picture. Accepting only ID attached with.png/.jpg/.jpeg extensions.
           type: string
           pattern: '^[a-zA-Z0-9-_]*\.(png|jpg|jpeg)$'
-          example: "http://images/lab.png"
+          example: "Cksvy-ZXtXRE.jpg"
           minLength: 0
           maxLength: 150
         bio:
@@ -184,10 +184,10 @@ components:
         image:
           description: |
             URL of the image just uploaded.
-            Accepting only http/https URLs and .png/.jpg/.jpeg extensions.
+            Accepting only ID attached with .png/.jpg/.jpeg extensions.
           type: string
-          pattern: '^[a-zA-Z0-9-_]*\.(png|jpg|jpeg)$$'
-          example: "http://lab.it/logo.png"
+          pattern: '^[a-zA-Z0-9-_]*\.(png|jpg|jpeg)$'
+          example: "0a25d5f2-3b07-492e-ab87-406c4e7422b8.png"
           minLength: 0
           maxLength: 150
         caption:
@@ -255,7 +255,9 @@ components:
     PhotoID:
       description: Unique photo identifier
       type: string
-      format: '^[a-zA-Z0-9-_]*$'
+      pattern: '^[a-zA-Z0-9-_]*$'
+      minLength: 1
+      maxLength: 20
       example: "CksvyZXtXRE"
       readOnly: true
           
@@ -264,7 +266,7 @@ components:
       type: string
       pattern: '^[a-zA-Z0-9-_]*$'
       example: "CksvyZXtXRE"
-      minLength: 3
+      minLength: 1
       maxLength: 20
       readOnly: true
       
@@ -566,7 +568,7 @@ paths:
       summary: See banned users
       description: |
          List of users banned from the profile of the logged user(my)
-      operationId: getBannedUsers
+      operationId: getMyBannedUsers
       responses:
         "200":
           description: |
@@ -913,41 +915,6 @@ paths:
   /comments/{comment_id}:
     parameters:
       - $ref: "#/components/parameters/comment_id"
-
-    put:
-      tags:
-        - Comments
-      summary: Modify or reply to a comment
-      description: |
-        An user can modify its own comment or reply to a comment of another user if the boolean flag is_reply_comment is activated
-      operationId: modifyComment
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Comment'
-      responses:
-        "200":
-          description: Comment updated successfully.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Comment'
-        "201": 
-          description: Comment created
-          content:
-            application/json: 
-              schema:
-                { $ref: "#/components/schemas/Comment" }
-        "400":
-          description: Bad request. Invalid input data.
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        "409":
-          description: Conflict.
-
-      security:
-        - bearerAuth: []
       
     delete:
       tags:
